# yamltopy

./: .gitignore  LICENSE  README.md  build-local.sh  setup.cfg  setup.py
.github/workflows/: release.yml
tests/: expected.py  test.yaml  test_yamltopy.py
yamltopy/: __init__.py  yamltopy.py
