[metadata]
name = yamltopy
version = 1.0.0
author = Laszlo Szikszai
author_email = sziklaszlo@gmail.com
description = A CLI tool to convert YAML file to Python module for better load performance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/szikszail/yamltopy
project_urls =
    Bug Tracker = https://github.com/szikszail/yamltopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    yamltopy
python_requires = >=3.6